crates/notify/tests/snapshots/digest__three_sites_text.snap
---
source: crates/notify/tests/digest.rs
expression: three().render().unwrap().text
---
CodoSEO weekly digest, Sep 28 to Oct 5, 2026

== example.com: score 92 (+3) ==
Your site passed 37/40 checks. 2 new issues.
Changes this week: 1 critical, 4 warnings, 11 notices.

New issues:
  - Page returns a 5xx error (2 pages)
  - Title is too long (14 pages)

Resolved:
  - Missing meta description (6 pages)

Most important changes:
  - [Critical] Became noindex: https://example.com/pricing (index → noindex)
  - [Warning] Status changed: https://example.com/blog/old-post (200 → 404)
  ...and 14 more

Open the dashboard: https://codoseo.test/s/11111111-1111-1111-1111-111111111111/audit
Turn these pages into rankings with RankOrg: https://rankorg.com/?domain=example.com&utm_source=codoseo&utm_medium=digest

== shop.example.org: score 88 (-2) ==
Your site passed 40/40 checks. No new issues.
No changes this week.

Open the dashboard: https://codoseo.test/s/shop.example.org/audit

== new-site.dev: score 71 ==
Your site passed 40/40 checks.
No changes this week.

Open the dashboard: https://codoseo.test/s/new-site.dev/audit

You get this email every Monday. Change what you hear about: https://codoseo.test/settings/alerts
